testsuite/bsc.typechecker/kind/TypeAliasParamGivenNonNumUsedNum.bs
package TypeAliasParamGivenNonNumUsedNum () where

type (Foo :: * -> *) a = Bit a

